<resources>
    <string name="app_name">即客回收-商家</string>
    <!--activityMain -->
    <string name="tv_main_home">首頁</string>

    <!--Recyc fragment -->
    <string name="first_online">在线:</string>
    <string name="first_get">接单:</string>
    <string name="first_water">流水:</string>
    <string name="first_done">成绩率:</string>

    <string name="publish_sd_notexist">sd卡不存在</string>
    <string name="publish_fail">图片获取失败</string>

    <string name="home_money">钱包</string>
    <string name="home_message">消息中心</string>
    <string name="home_setting">设置</string>

    <string name="gallay_error">图片不能被正确识别，请您更换图片</string>
    <string name="sign_in_mobile">手机号不得为空</string>
    <string name="sign_in_number_count">手机号为11位数字</string>
    <string name="sign_in_pwd">密码不得为空</string>
    <string name="sign_in_pwd_pwd2">密码不一致</string>
    <string name="sign_in_pwd_count">密码应为6-20位</string>
    <string name="sign_in_verify_count">验证码应为4位</string>
    <string name="sign_in_check">请遵守协议</string>
    <string name="sign_in_success">Success</string>
    <string name="sign_in_mobile_format">请检查手机号</string>
    <string name="sign_in_network">网络异常</string>
    <string name="sign_in_verify">验证码不得为空</string>
    <string name="sign_up_send_code">发送验证码</string>
    <string name="sign_up_restart">重新发送</string>
    <string name="sign_send_code_success">请查收</string>
    <string name="sign_send_code_failure">发送失败</string>

    <string name="gpsfollow">追随</string>
    <string name="gpslocate">定位</string>
    <string name="gpsrotate">旋转</string>

    <!--注册 界面-->
    <string name="sign_up_dialog_content">我们的工作人员会在24小时内联系您哦~</string>
    <string name="sign_up_dialog_success">提交成功</string>
    <string name="sign_up_dialog_btn">我知道了</string>


</resources>
