<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back_color_f9"
    android:orientation="vertical">

    <com.zhy.autolayout.AutoRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100px"
        android:layout_marginBottom="30px"
        android:layout_marginTop="30px">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:textColor="@color/black"
            android:text="@string/sign_up_dialog_success"
            android:textSize="@dimen/text_view_60" />
    </com.zhy.autolayout.AutoRelativeLayout>

    <com.zhy.autolayout.AutoRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50px">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/sign_up_dialog_content"
            android:textColor="@color/green"
            android:textSize="@dimen/text_view_40" />
    </com.zhy.autolayout.AutoRelativeLayout>

    <com.zhy.autolayout.AutoRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100px"
        android:layout_marginTop="30px">

        <Button
            android:id="@+id/fragment_back_login_yes"
            android:layout_width="270px"
            android:layout_height="60px"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="50px"
            android:layout_marginTop="5px"
            android:background="@color/text_color_cheng"
            android:text="@string/sign_up_dialog_btn"
            android:textColor="@color/white"
            android:textSize="@dimen/text_view_30"
            />

    </com.zhy.autolayout.AutoRelativeLayout>
</com.zhy.autolayout.AutoLinearLayout>